[gd_scene load_steps=4 format=3 uid="uid://bmjcctxdbueow"]

[ext_resource type="Script" uid="uid://c8c78v7o7xtyc" path="res://game/player/weapon/axe/axe.gd" id="1_aosnk"]
[ext_resource type="Texture2D" uid="uid://p3wnd7de0qmd" path="res://game/player/weapon/axe/better_quality_square_axe.png" id="1_hya4j"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kapev"]
size = Vector2(322, 32)

[node name="axe" type="RigidBody2D"]
collision_layer = 2
collision_mask = 53
continuous_cd = 1
max_contacts_reported = 1
script = ExtResource("1_aosnk")

[node name="BetterQualitySquareAxe" type="Sprite2D" parent="."]
position = Vector2(164, 29)
rotation = 1.30133
texture = ExtResource("1_hya4j")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(151, 0)
shape = SubResource("RectangleShape2D_kapev")

[node name="Hurtbox" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 16

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Hurtbox"]
position = Vector2(264, 24)
polygon = PackedVector2Array(32, 0, 48, 8, 64, 16, 56, 32, 48, 48, -16, 64, -24, 56, -40, 48, -56, 32, -32, 24, -40, 16, -16, 8, -24, 0, -8, 0, -16, -8, 0, -48, -24, -48, -24, -56, -16, -72, -8, -88, 8, -88, 32, -72, 48, -64, 48, -56, 32, -48)

[connection signal="body_entered" from="Hurtbox" to="." method="_on_hurtbox_body_entered"]
